--- a/sections/blog--blog-posts.liquid
+++ b/sections/blog--blog-posts.liquid
@@ -260,9 +260,9 @@
 
                         <h3 class="homepage-blog--title fs-heading-m"><a href="{{ article.url }}">{{ article.title }}</a></h3>
 
-                        <div class="rte">
+                        {% comment %} <div class="rte">
                           <p>{{ article.excerpt_or_content | strip_html | truncatewords: 20 }}</p>
-                        </div>
+                        </div> {% endcomment %}
 
                       </div>
                     {% endfor %}
@@ -290,17 +290,19 @@
                     {% endfor %}
 
                   {% endunless %}
-
+                </div>
+                <div class="information__more">
+                  <a href="https://obaneya-shop.com/blogs/information">MORE</a>
                 </div>
             </div>
 
-            <div class="homepage-blog-mobile swiper-container large--hide">
-              <div class="swiper-wrapper">
+            <div class="homepage-blog-mobile large--hide">
+              <div class="">
 
                 {% unless selected_blog == empty %}
 
                   {% for article in selected_blog.articles limit: section.settings.post_limit %}
-                    <div class="swiper-slide">
+                    <div class="">
                       <div class="grid__item">
                         {% if article.image %}
                           <div class="article-image">
@@ -316,13 +318,13 @@
                         {% endif %}
                         <h3 class="homepage-blog--title fs-heading-m"><a href="{{ article.url }}">{{ article.title }}</a></h3>
 
-                        <div class="rte">
+                        {% comment %} <div class="rte">
                           {% if article.excerpt.size > 0 %}
                             {{ article.excerpt }}
                           {% else %}
                             <p>{{ article.content | strip_html | truncatewords: 20 }}</p>
                           {% endif %}
-                        </div>
+                        </div> {% endcomment %}
                       </div>
                     </div>
                   {% endfor %}
@@ -330,7 +332,7 @@
                 {% else %}
 
                   {% for i in (1..section.settings.post_limit) limit: section.settings.post_limit %}
-                    <div class="swiper-slide">
+                    <div class="">
                       <div class="grid__item">
 
                         <div class="article-image">
@@ -356,12 +358,29 @@
                 {% endunless %}
 
               </div>
-              <div class="swiper-pagination"></div>
+              <div class="information__more">
+                <a href="https://obaneya-shop.com/blogs/information">MORE</a>
+              </div>
             </div>
 
         {% endcase %}
 
     </div>
+    <div class="homepage-information-section-wrapper">
+      <div class="homepage-information-section-wrapper_inner">
+        <div class="homepage-information-section-wrapper__img">
+          <img src="https://cdn.shopify.com/s/files/1/0815/8035/9955/files/Stroke_icons.png?v=1696484312" alt="4,000円以上のご購入で配送料無料！" class="icon_delivery" loading="lazy">
+        </div>
+        <div class="homepage-information-section-wrapper__title">
+          <span>4,000円以上のご購入で</span>
+          <p>配送料無料！</p>
+        </div>
+      </div>
+      <div class="homepage-information-section-wrapper__btn">
+        <a href="https://obaneya-shop.com/pages/contac">お問い合わせはこちら</a>
+      </div>
+    </div>
+  
   </div>
 </div>
 
